y.output

state 0
	$accept: .Input $end 
	Input: .    (1)

	.  reduce 1 (src line 43)

	Input  goto 1

state 1
	$accept:  Input.$end 
	Input:  Input.Func 

	$end  accept
	FUNC  shift 3
	.  error

	Func  goto 2

state 2
	Input:  Input Func.    (2)

	.  reduce 2 (src line 44)


state 3
	Func:  FUNC.IDENT '(' Args ')' '{' Statements '}' 

	IDENT  shift 4
	.  error


state 4
	Func:  FUNC IDENT.'(' Args ')' '{' Statements '}' 

	'('  shift 5
	.  error


state 5
	Func:  FUNC IDENT '('.Args ')' '{' Statements '}' 
	Args: .    (4)

	.  reduce 4 (src line 48)

	Args  goto 6

state 6
	Func:  FUNC IDENT '(' Args.')' '{' Statements '}' 
	Args:  Args.',' IDENT 

	')'  shift 7
	','  shift 8
	.  error


state 7
	Func:  FUNC IDENT '(' Args ')'.'{' Statements '}' 

	'{'  shift 9
	.  error


state 8
	Args:  Args ','.IDENT 

	IDENT  shift 10
	.  error


state 9
	Func:  FUNC IDENT '(' Args ')' '{'.Statements '}' 
	Statements: .    (6)

	.  reduce 6 (src line 51)

	Statements  goto 11

state 10
	Args:  Args ',' IDENT.    (5)

	.  reduce 5 (src line 49)


state 11
	Func:  FUNC IDENT '(' Args ')' '{' Statements.'}' 
	Statements:  Statements.Statement 

	IDENT  shift 14
	COMMENT  shift 15
	'}'  shift 12
	.  error

	Statement  goto 13

state 12
	Func:  FUNC IDENT '(' Args ')' '{' Statements '}'.    (3)

	.  reduce 3 (src line 46)


state 13
	Statements:  Statements Statement.    (7)

	.  reduce 7 (src line 52)


state 14
	Statement:  IDENT.'=' Expr 

	'='  shift 16
	.  error


state 15
	Statement:  COMMENT.    (9)

	.  reduce 9 (src line 55)


state 16
	Statement:  IDENT '='.Expr 

	INT  shift 18
	IDENT  shift 20
	.  error

	Expr  goto 17
	Call  goto 19

state 17
	Statement:  IDENT '=' Expr.    (8)
	Expr:  Expr.OP INT 
	Expr:  Expr.OP Call 

	OP  shift 21
	.  reduce 8 (src line 54)


state 18
	Expr:  INT.    (10)

	.  reduce 10 (src line 57)


state 19
	Expr:  Call.    (11)

	.  reduce 11 (src line 58)


state 20
	Call:  IDENT.'(' ')' 
	Call:  IDENT.'(' ExprList ')' 

	'('  shift 22
	.  error


state 21
	Expr:  Expr OP.INT 
	Expr:  Expr OP.Call 

	INT  shift 23
	IDENT  shift 20
	.  error

	Call  goto 24

state 22
	Call:  IDENT '('.')' 
	Call:  IDENT '('.ExprList ')' 

	INT  shift 18
	IDENT  shift 20
	')'  shift 25
	.  error

	Expr  goto 27
	Call  goto 19
	ExprList  goto 26

state 23
	Expr:  Expr OP INT.    (12)

	.  reduce 12 (src line 59)


state 24
	Expr:  Expr OP Call.    (13)

	.  reduce 13 (src line 60)


state 25
	Call:  IDENT '(' ')'.    (14)

	.  reduce 14 (src line 62)


state 26
	Call:  IDENT '(' ExprList.')' 
	ExprList:  ExprList.',' Expr 

	')'  shift 28
	','  shift 29
	.  error


state 27
	Expr:  Expr.OP INT 
	Expr:  Expr.OP Call 
	ExprList:  Expr.    (16)

	OP  shift 21
	.  reduce 16 (src line 65)


state 28
	Call:  IDENT '(' ExprList ')'.    (15)

	.  reduce 15 (src line 63)


state 29
	ExprList:  ExprList ','.Expr 

	INT  shift 18
	IDENT  shift 20
	.  error

	Expr  goto 30
	Call  goto 19

state 30
	Expr:  Expr.OP INT 
	Expr:  Expr.OP Call 
	ExprList:  ExprList ',' Expr.    (17)

	OP  shift 21
	.  reduce 17 (src line 66)


14 terminals, 9 nonterminals
18 grammar rules, 31/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
58 working sets used
memory: parser 12/120000
10 extra closures
26 shift entries, 1 exceptions
11 goto entries
2 entries saved by goto default
Optimizer space used: output 33/120000
33 table entries, 0 zero
maximum spread: 14, maximum offset: 29
